Bug 526732 - Update to latest Core API
Change-Id: Ibec9d2adcd3cb52dafa8d25d3b8466af448f0270
Signed-off-by: Thomas Watson <tjwatson@us.ibm.com>